testdata/baselines/reference/submodule/conformance/nodeModulesResolveJsonModule(module=node20).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
index.cts(5,33): error TS2339: Property 'name' does not exist on type 'string'.
index.ts(1,34): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
index.ts(3,38): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
index.ts(5,33): error TS2339: Property 'name' does not exist on type 'string'.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
==== index.ts (3 errors) ====
    import pkg from "./package.json" with { type: "json" };
                                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
                                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.cts (1 errors) ====
    import pkg from "./package.json";
    export const name = pkg.name;
    import * as ns from "./package.json";
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.mts (0 errors) ====
    import pkg from "./package.json" with { type: "json" };
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
    export const thing = ns;
    export const name2 = ns.default.name;
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "type": "module",
        "default": "misedirection"
    }